# gentrace-self-hosted

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  CODEOWNERS  README-ingestion-test.md  README.md  artifacthub-repo.yml  gentrace-self-hosted-0.0.1.tgz  gentrace-self-hosted-0.1.0.tgz  gentrace-self-hosted-0.1.3.tgz  index.yaml  package.json  release-please-config.json  requirements-test.txt  run-ingestion-test.sh  test-ingestion-node.js  test-ingestion-pipeline.py  validate-clickhouse.sql  validate-postgres.sql
.github/workflows/: claude-code.yml  docker-build.yml  docker-compose-test.yml  helm-publish.yml  release-please.yml
docker/: .env.example  Dockerfile.kafka-connect  PROXY_SETUP.md  README.md  SEED_README.md  collect-logs.sh  docker-compose-restricted.yml  docker-compose.yml  extract-logs.sh  kafka-ui-config.yaml  package.json  run-minimal-seed.sh  seed-minimal.ts  test-seed-data.ts
docker/environment/: setup-env.bat  setup-env.sh
docker/ingestion-tests/: README.md  run-tests.sh
docker/ingestion-tests/python/: .gitignore  README.md  pyproject.toml  test_ingestion_pipeline.py
docker/kafka-connect-config/: clickhouse.properties  clickhouse.properties.template  entrypoint.sh  standalone.properties  standalone.properties.template
docker/scripts/: convert-private-key-to-env.sh  ensure-clickhouse-tables.sh  init-minio.sh
kubernetes/example-secrets/: admin-user.yaml  all-secrets.yaml.example  clickhouse.yaml  jwt.yaml  kafka.yaml  object-storage.yaml  postgres.yaml  quay-image-pull-secret.md
packer/: template.pkr.hcl
vm/: README.md
(+36 files in other folders)
